secure against empty list errors